--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ tauri-plugin-shell = "2.3.0"
 tauri-utils = "2.3.0"
 tauri-macros = "2.3.0"
 tauri-plugin-opener = "2.4.0"
+glob = "0.3"
 
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
