refactor: cleaned up API's

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ tauri-utils = "2.3.0"
 tauri-macros = "2.3.0"
 tauri-plugin-opener = "2.4.0"
 glob = "0.3"
+windows_shortcuts = "0.0.1"
 
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
